[gd_scene load_steps=11 format=3 uid="uid://dn4p5ol23q00t"]

[ext_resource type="Script" path="res://Script/main_ui.gd" id="1_87n4r"]
[ext_resource type="FontFile" uid="uid://287afp8wxi3m" path="res://REDWING-LIGHT.OTF" id="1_5312c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a3s5v"]
bg_color = Color(0.137255, 0.137255, 0.137255, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rv06x"]
font = ExtResource("1_5312c")
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xvloi"]
bg_color = Color(0.662745, 0.745098, 0.894118, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ufbun"]
font = ExtResource("1_5312c")
font_size = 64
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bocvf"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_54sk8"]
bg_color = Color(0.0431373, 0.219608, 0.219608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s3y3a"]
bg_color = Color(0.0784314, 0.00392157, 0.00392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t1gfa"]
bg_color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_87n4r")

[node name="StatPanel" type="Panel" parent="."]
layout_mode = 1
offset_left = 29.0
offset_top = 26.0
offset_right = 616.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a3s5v")

[node name="StatsLabel" type="Label" parent="StatPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.5
offset_top = -20.0
offset_right = 256.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Balls Remaining : 4 || Power : 80 || Angle  : 50Â°"
label_settings = SubResource("LabelSettings_rv06x")

[node name="NextLevelUI" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -217.0
offset_right = 217.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xvloi")

[node name="Label" type="Label" parent="NextLevelUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -170.0
offset_top = 65.0
offset_right = 170.0
offset_bottom = 145.0
grow_horizontal = 2
text = "Level Complete"
label_settings = SubResource("LabelSettings_ufbun")

[node name="NextLevelButton" type="Button" parent="NextLevelUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -41.0
offset_right = 106.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_5312c")
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxFlat_bocvf")
theme_override_styles/hover = SubResource("StyleBoxFlat_54sk8")
text = "Next Level"

[node name="RetryButton" type="Button" parent="NextLevelUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 78.0
offset_right = 69.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_5312c")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_bocvf")
theme_override_styles/hover = SubResource("StyleBoxFlat_54sk8")
text = "Retry"

[node name="RetryUI" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -217.0
offset_right = 217.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xvloi")

[node name="Label" type="Label" parent="RetryUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -170.0
offset_top = 65.0
offset_right = 170.0
offset_bottom = 145.0
grow_horizontal = 2
text = "No Balls Left"
label_settings = SubResource("LabelSettings_ufbun")
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="RetryUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -4.0
offset_right = 106.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_5312c")
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxFlat_bocvf")
theme_override_styles/hover = SubResource("StyleBoxFlat_54sk8")
text = "Retry"

[node name="MainMenu" type="Button" parent="RetryUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.0
offset_top = -105.0
offset_right = 78.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_5312c")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_s3y3a")
theme_override_styles/hover = SubResource("StyleBoxFlat_t1gfa")
text = "Main Menu
"

[node name="GameOverUI" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -217.0
offset_right = 217.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xvloi")

[node name="Label" type="Label" parent="GameOverUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -170.0
offset_top = 65.0
offset_right = 170.0
offset_bottom = 145.0
grow_horizontal = 2
text = "Game Completed"
label_settings = SubResource("LabelSettings_ufbun")
horizontal_alignment = 1

[node name="MainMenu" type="Button" parent="GameOverUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = 4.0
offset_right = 136.0
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_5312c")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_s3y3a")
theme_override_styles/hover = SubResource("StyleBoxFlat_t1gfa")
text = "Main Menu
"

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="pressed" from="NextLevelUI/NextLevelButton" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="NextLevelUI/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="RetryUI/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="RetryUI/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="GameOverUI/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
